--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,5 +1,5 @@
 PORT = 5000
-NODE_ENV = DEVELOPMENT
+NODE_ENV = PRODUCTION
 FRONTEND_URL = "http://localhost:3000"
 DB_LOCAL_URL = "mongodb://127.0.0.1:27017/shopit"
 DB_URL = "mongodb+srv://saveur:saveur123@nodejsprojects.jxwetqf.mongodb.net/shopit?retryWrites=true&w=majority"
